增加awt打包配置